[refs #14] Fix align for words.

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ button#fail {
   padding: 0.2em;
   margin: 2px 2px 2px 2px;
   background: white;
+  line-height: 1.5;
 }
 
 .dropped {
